Minor UI improvements

--- a/website/templates/components/map_sidebar.pug
+++ b/website/templates/components/map_sidebar.pug
@@ -18,7 +18,7 @@ div#pdm-map-sidebar.pdm-hidden
 
 				if editors.pdm && editors.pdm.add
 					h5.mt-3 Éditer
-					button.editor-add-btn.btn.btn-primary.btn-block(type="button" title=editors.pdm.add.title)
+					button.editor-add-btn.btn.btn-primary.btn-block.d-flex.align-items-center.justify-content-center(type="button" title=editors.pdm.add.title)
 						span.d-inline-block.container-svg-fa.mr-3(style="height: 24px")
 							include ../../images/marker_plus.svg
 						| #{editors.pdm.add.title}
