--- a/website/templates/components/map_navbar.pug
+++ b/website/templates/components/map_navbar.pug
@@ -5,5 +5,5 @@ nav.navbar.navbar-expand-sm.navbar-light.bg-light.d-flex.justify-content-between
 
 	include geocoder.pug
 
-	form.form-inline
+	div.form-inline
 		+user_button
